# SciQLopPlots

./: .clang-format  .gitignore  CLAUDE.md  README.md  REVIEW-2026-05-30.md  code-review-2026-05-31.md  meson.build  meson_options.txt  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
Docker/: Dockerfile  build.sh  make_wheel.sh
SciQLopPlots/: __init__.py  dsp.py  event.py  meson.build  pipeline.py  properties.py  smart_search.py  smart_search_controller.py  smart_search_method.py  smart_search_semantic.py  tracing.py
SciQLopPlots/bindings/: _QCustomPlot.hpp  bindings.h  bindings.xml  snippets.cpp
SciQLopPlots/bindings/SciQLopPlotsBindings/: meson.build
SciQLopPlots/bindings/helper_scripts/: shiboken-gen.py  shiboken-helper.py  src_list.py
bindings/: bindings.h  bindings.xml  meson.build  numpy_wrappers.cpp  numpy_wrappers.hpp  shiboken-helper.py  snippets.cpp  src_list.py
bindings/SciQLopPlots/: __init__.py
bindings/SciQLopPlotsBindings/: meson.build
bindings/helper_scripts/: rpath-helper.py  shiboken-gen.py  shiboken-helper.py  src_list.py
docs/: backlog-2026-03-27.md  backlog-2026-04-28.md  backlog-2026-05-16.md  backlog-2026-06-06.md  backlog-2026-06-10.md  python-api-review-2026-03-07.md  remote-channels-sciqlop-handover.md  review-colormap-pipeline-2026-07-06.md
manual-tests/: meson.build
manual-tests/SimplePlot/: DataGenerator.hpp  meson.build  simpleplot.cpp  simpleplot.h  simpleplot.ui
qcustomplot-source/: qcustomplot.cpp  qcustomplot.h
resources/: README.md  resources.qrc
src/: AbstractResampler.cpp  AxisSynchronizer.cpp  BooleanDelegate.cpp  BufferProtocol.cpp  ColorDelegate.cpp  ColorGradientDelegate.cpp  CrosshairSynchronizer.cpp  DataProducer.cpp  DelegateRegistry.cpp  ExternalScoreOverlay.cpp  FontDelegate.cpp  Graph.hpp  IPlotWidget.cpp  IPlotWidget.hpp  InspectorBase.cpp  InspectorExtensionDelegate.cpp  InspectorView.cpp  Inspectors.cpp  LegendDelegate.cpp  LineDelegate.cpp  MarkerDelegate.cpp  Model.cpp  MultiPlotsVSpan.cpp  Node.cpp  ProductsFlatFilterModel.cpp  ProductsModel.cpp  ProductsNode.cpp  ProductsScoreDelegate.cpp  ProductsTreeFilterModel.cpp  ProductsView.cpp  Profiling.cpp  PropertiesPanel.cpp  PropertiesView.cpp  PropertyDelegateBase.cpp  PythonInterface.cpp  QCPAbstractPlottableWrapper.cpp  QCPItemRichText.cpp  QCustomPlotWrapper.cpp  QCustomPlotWrapper.hpp  QueryHighlighter.cpp  (+78 more)
src/DSP/: dsp_compile_test.cpp  meson.build  python_module.cpp
src/DSP/simd/: kernels_arch.cpp  kernels_dispatch.cpp  meson.build
src/Events/: Keyboard.hpp  Mouse.hpp  Wheel.hpp
src/Export/: SciQLopExportable.cpp
src/Interfaces/: IGraph.cpp  IPlotWidget.cpp
src/Interfaces/GraphicObjects/: GraphicObject.cpp  ITimeSpan.cpp
src/Qt/QCustomPlot/: QCustomPlotWrapper.cpp
tests/: meson.build
tests/SimplePlot/: main.cpp
tests/common/: DataGenerator.hpp
tests/fuzzing/: actions.py  axis_actions.py  callback_actions.py  conftest.py  data_providers.py  graph_actions.py  introspect.py  item_actions.py  model.py  panel_actions.py  plot_actions.py  story.py  test_fuzzing.py  test_sciqlop_workflows.py  test_workflows.py  torture_actions.py
tests/integration/: conftest.py  test_audit_2026_04_28_reproducers.py  test_axis_api.py  test_busy_indicator.py  test_callback_non_numeric_dtype.py  test_callback_swap_race.py  test_colormap_api.py  test_colormap_autoscale_percentile.py  test_colormap_first_batch_rescale.py  test_critical_bugs.py  test_dataproducer_mode_race.py  test_deferred_buffer_release_drain.py  test_drop_target.py  test_export_api.py  test_function_graph_autosize.py  test_fuzzing_findings.py  test_graph_api.py  test_hardening_foundation.py  test_hardening_p0.py  test_histogram2d.py  test_histogram2d_correctness.py  test_histogram2d_log_bins.py  test_inspector_drag_drop.py  test_inspector_extensions.py  test_inspector_insert_order.py  test_inspector_model.py  test_invalidate_cache.py  test_item_signals_and_pixel.py  test_items_api.py  test_items_style_api.py  test_line_graph_regression.py  test_memory.py  test_multi_dtype.py  test_nonfinite_data.py  test_overlay_api.py  test_p1_bugs.py  test_panel_api.py  test_pipeline_integration.py  test_pipeline_lifetime.py  test_plot_lifecycle.py  (+19 more)
tests/manual-tests/: common.py  demo_data.py  dsp_gallery.py  gallery.py  meson.build  test_crosshair.py  test_inspector_properties.py  test_theming.py  test_tracing_integration.py  test_tracing_python.py
tests/manual-tests/All/: main.py
tests/manual-tests/DragNDrop/: main.py
tests/manual-tests/DrawingAPI/: main.py
tests/manual-tests/ForProfiling/: main.py
tests/manual-tests/GigaPoints/: main.py
tests/manual-tests/MicroSciQLop/: main.py
tests/manual-tests/MultiPlot/: main.cpp  meson.build  multiplot.cpp  multiplot.h  multiplot.ui
tests/manual-tests/Pipeline/: main.py
tests/manual-tests/Products/: main.py
tests/manual-tests/Projections/: main.py
tests/manual-tests/QCP_Examples/plots/: main.py
tests/manual-tests/SciQLopColorMap/: main.py
tests/manual-tests/SciQLopGraph/: main.py
tests/manual-tests/SciQLopVerticalSpan/: main.py
tests/manual-tests/SimplePlot/: main.cpp  main.py  meson.build  simpleplot.cpp  simpleplot.h  simpleplot.ui
tests/manual-tests/StackedGraphs/: main.py
tests/manual-tests/StressModel/: main.py
tests/manual-tests/advanced/: drag_and_drop.py  pipeline.py  products.py  projections.py  stacked_plots.py
tests/manual-tests/basics/: colormap.py  contour_colormap.py  histogram2d.py  line_graph.py  parametric_curve.py  projection.py  vertical_spans.py  waterfall.py
tests/manual-tests/stress/: profiling.py  stress_model.py
tests/perf/: baselines.json  bench_dsp.py  bench_search.cpp  bench_segments.cpp  colormap-perf.py  conftest.py  meson.build  perfutils.py  profile_dsp.py  run-perf.py  test_benchmarks.py
tests/sanity/: signal_and_slots.sh
tests/tracing/: meson.build  test_tracing.cpp
tests/unit/: conftest.py  test_dsp.py  test_event.py  test_pipeline.py  test_properties.py  test_registration.py  test_smart_search_controller.py  test_smart_search_public_api.py
(+248 files in other folders)
